# fastapi-todo-app

./: pyproject.toml  readme
srcs/: main.py
srcs/api/routes/: todo.py  users.py
srcs/app/: main.py
srcs/models/: todo.py
srcs/schemas/: todo.py  users.py
